style/style.css
/* blue; rgb(49,97,244) */
/* generics */

*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: Whitney, 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-weight: 600;
    color: #fff;
}

/* utils */

.container {
    max-width: 1200px;
    margin: 0 auto;
}

.clearfix::after {
    content: "";
    display: table;
    clear: both;
}

.col {
    float: left;
}

.col.w-15 {
    width: 15%;
}

.col.w-20 {
    width: 20%;
}

.col.w-35 {
    width: 35%;
}

.col.w-40 {
    width: 40%;
}

.col.w-50 {
    width: 50%;
}

.col.w-60 {
    width: 60%;
}

.col.w-65 {
    width: 65%;
}

.text-left, p {
    text-align: left;
}

.text-center {
    text-align: center;
}

.text-right {
    text-align: right;
}

.btn {
    border-radius: 40px;
    text-decoration: none;
}

.btn.btnwhite, .btnwhite>a {
    color: #23272a;
    background-color: #fff;
}

.btn.btnblack, .btnblack>a {
    color: #fff;
    background-color: #23272a;
}

.btn.btnviolet, .btnviolet>a {
    color: #fff;
    background-color: #8ea1e1;
}

.btn.btnsmall {
    font-size: 14px;
    padding: 5px 10px;
}

.btn.btnbig {
    font-size: 18px;
    padding: 15px 25px;
}

.menu,
.menu li {
    display: inline-block;
    font-size: 14px;
    list-style-type: none;
}

.menu li{
    margin: 0 20px;
}

.menu a {
    color: #fff;
}

.menu a:hover,
.botmenu a:hover{
    text-decoration: underline;
}

a {
    text-decoration: none;
    color: #fff;
}

.btnwhite:hover {
    color: #7289da;
    text-shadow: #7289da 0 0 1px;
    box-shadow: #354069 0 2px 10px;
    transition: 0.5s;
}

.btnblack:hover {
    box-shadow: #000 0 2px 10px;
    background-color: #3a3f42;
    transition: 0.5s;
}

.btnviolet:hover {
    box-shadow: #354069 0 2px 10px;
    background-color: #b2bef0;
    transition: 0.5s;
}

/* header */

header {
    background-color: rgb(49,97,244);
}

header .topbar {
    height: 80px;
    line-height: 80px;
}

header .jumbotron {
    background-image: url(../img/jumbo.png);
    background-size: cover;
    background-repeat: no-repeat;
    background-position-y: center;
    padding-top: 100px;
    padding-bottom: 200px;
}

#logo {
    vertical-align: middle;
}

div.btn {
    display: inline-block;
}

.jumbotron p {
    font-size: 18px;
    margin: 50px 230px 30px 230px;
}

.btnwhite.btnbig{
    margin-right: 30px;
}


/* main */
main {
    color: #23272a;
}

h2{
    font-size: 54px;
}

p{
    line-height: 1.6em;
    margin-top: 30px;
}

section {
    padding-bottom: 100px;
    display: inline-block;
}

.block {
    margin-top: 150px;
}

.bgwave {
    background-image: linear-gradient(rgba(255,255,255,0.95), rgba(255,255,255,0.95)), url(../img/wave.svg);
    background-size: contain;
    background-repeat: no-repeat;
    width: 100%;
    padding-top: 300px;
    margin-top: 50px;
}

.final {
    background-image: url(../img/stars.svg);
    background-size: contain;
    background-repeat: no-repeat;
    padding: 50px 20px;
    margin: 0 300px;
}

div>h3 {
    font-size: 26px;
}


/* footer */
footer {
    background-color: #23272a;
    padding-top: 100px;
    font-size: 14px;
    line-height: 2em;
    padding-bottom: 100px;
}

h4 {
    color: #7289da;
    font-size: 30px;
    padding-right: 250px;
    padding-bottom: 30px;
}

h6 {
    color: #7289da;
    font-size: 16px;
}

.lang-ico {
    width: 25px;
}

.icons li {
    list-style-type: none;
    font-size: 20px;
    margin-left: 0;
    padding-top: 20px;
}

footer li {
    list-style-type: none;
}

hr{
    border-color: #7289da;
    margin: 30px 0;
}

